[tool.poetry]
name = "kattiskitten"
version = "0.3.2"
description = "Kattis CLI - Easily download, test and submit kattis problems"
authors = ["Felix Qvist <felix.qvist@gmail.com>"]

readme = 'README.md'
repository = "https://github.com/FelixDQ/kattis-kitten"
homepage = "https://github.com/FelixDQ/kattis-kitten"

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "4.8.1"
requests = "2.22.0"
click = "7.0"
colorful = "0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
kk = 'kattiskitten:main'