[tool.poetry]
name = "kattiskitten"
version = "0.5.0"
description = "Kattis CLI - Easily download, test and submit kattis problems"
authors = ["Felix Qvist <felix@qvist.dev>"]

license= 'MIT'
readme = 'README.md'
repository = "https://github.com/FelixDQ/kattis-kitten"
homepage = "https://github.com/FelixDQ/kattis-kitten"

[tool.poetry.dependencies]
python = "^3.6"
requests = "2.22.0"
click = "7.0"
colorful = "0.5.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
kk = 'kattiskitten:main'