[tool.poetry]
authors = ["Felix Qvist <felix@qvist.dev>"]
description = "Kattis CLI - Easily download, test and submit kattis problems"
name = "kattiskitten"
version = "0.14.0"

homepage = "https://github.com/FelixDQ/kattis-kitten"
license = 'MIT'
readme = 'README.md'
repository = "https://github.com/FelixDQ/kattis-kitten"

[tool.poetry.dependencies]
click = "7.0"
colorful = "0.5.4"
python = "^3.6"
requests = "2.22.0"

[tool.poetry.dev-dependencies]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.poetry.scripts]
kk = 'kattiskitten:main'
